manifiesto/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Contrato__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contrato</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Casos</relationshipLabel>
        <relationshipName>Casos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Detalle_Submotivo_Reclamo__c</fullName>
        <label>Detalle Submotivo Reclamo</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Submotivo_del_reclamo__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No cumple requerimiento de cliente</fullName>
                </value>
                <value>
                    <fullName>No cumple parámetros especificación</fullName>
                </value>
                <value>
                    <fullName>Vencido (Industrial)</fullName>
                </value>
                <value>
                    <fullName>Contaminado (Food)</fullName>
                </value>
                <value>
                    <fullName>Contaminado (Farma)</fullName>
                </value>
                <value>
                    <fullName>Contaminado (Feed)</fullName>
                </value>
                <value>
                    <fullName>Vencido (Food)</fullName>
                </value>
                <value>
                    <fullName>Vencido (Farma)</fullName>
                </value>
                <value>
                    <fullName>Vencido (Feed)</fullName>
                </value>
                <value>
                    <fullName>Por vencer (Industrial)</fullName>
                </value>
                <value>
                    <fullName>Por vencer (Food)</fullName>
                </value>
                <value>
                    <fullName>Por vencer (Farma)</fullName>
                </value>
                <value>
                    <fullName>Por vencer (Feed)</fullName>
                </value>
                <value>
                    <fullName>Otro calidad</fullName>
                </value>
                <value>
                    <fullName>Envase (no original, defectuoso, roto, con filtración, sucio, oxidado, abollado, mojado, etc.</fullName>
                </value>
                <value>
                    <fullName>Rotulación incompleta, equivocada, sin etiqueta, sin lote, sucia , dañada, etc</fullName>
                </value>
                <value>
                    <fullName>Fecha de elaboración y vencimiento no coincide con certificado C.O.A.</fullName>
                </value>
                <value>
                    <fullName>Diferencia de pesaje (menor cantidad respecto a etiqueta)</fullName>
                </value>
                <value>
                    <fullName>Sellos (defectuosos, sin sellos)</fullName>
                </value>
                <value>
                    <fullName>Producto sin paletiza</fullName>
                </value>
                <value>
                    <fullName>Pallets (rotos o en mal estado)</fullName>
                </value>
                <value>
                    <fullName>Otro presentación</fullName>
                </value>
                <value>
                    <fullName>Error en precio y/o producto y/o lote y/o factura y/o cantidad</fullName>
                </value>
                <value>
                    <fullName>Error de datos de cliente en factura o guía de despacho</fullName>
                </value>
                <value>
                    <fullName>Error tipo de envase</fullName>
                </value>
                <value>
                    <fullName>Error de cantidad</fullName>
                </value>
                <value>
                    <fullName>Otro documentación</fullName>
                </value>
                <value>
                    <fullName>No enviado y/o adjunto al despacho</fullName>
                </value>
                <value>
                    <fullName>Falta y/o error en fechas de elaboración y/o vencimiento</fullName>
                </value>
                <value>
                    <fullName>No corresponde al producto solicitado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Evaluacion_de_Informe__c</fullName>
        <label>Evaluación de Informe</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aprueba</fullName>
                </value>
                <value>
                    <fullName>Rechaza</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Indicador_Etapa__c</fullName>
        <formula>IF(
   
          Resumen_Etapa__c   &lt;=   4,
        

             IMAGE(&quot;https://oxiquim--sbx2021--c.visualforce.com/resource/1626119141000/Verde&quot;,&quot;VERDE&quot;,30,30),

             IMAGE(&quot;https://oxiquim--sbx2021--c.visualforce.com/resource/1626119157000/Rojo?&quot;,&quot;ROJO&quot;,30,30))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Indicador Etapa</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Investigador_a_cargo__c</fullName>
        <label>Investigador a cargo</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Numero_de_Oxireport__c</fullName>
        <label>Número de Oxireport</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Oportunidad__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Oportunidad</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Casos</relationshipLabel>
        <relationshipName>Casos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Planta__c</fullName>
        <label>Planta</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Iquique</fullName>
                </value>
                <value>
                    <fullName>Mejillones</fullName>
                </value>
                <value>
                    <fullName>Quintero</fullName>
                </value>
                <value>
                    <fullName>Quilicura</fullName>
                </value>
                <value>
                    <fullName>Santa María</fullName>
                </value>
                <value>
                    <fullName>Escuadrón</fullName>
                </value>
                <value>
                    <fullName>Puerto Montt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resumen_Etapa__c</fullName>
        <label>Resumen Etapa</label>
        <summaryFilterItems>
            <field>Plazos_por_Etapa__c.D_as_Transcurridos_numero__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Plazos_por_Etapa__c.Caso__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Rut_Razon_Social__c</fullName>
        <label>Rut Razón Social</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submotivo_del_reclamo__c</fullName>
        <label>Submotivo del reclamo</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Reason</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Calidad del Producto</fullName>
                </value>
                <value>
                    <fullName>Presentación del Producto</fullName>
                </value>
                <value>
                    <fullName>Documento mal emitido</fullName>
                </value>
                <value>
                    <fullName>Problemas con Certificado</fullName>
                </value>
                <value>
                    <fullName>Mala atención/incumplimiento servicio</fullName>
                </value>
                <value>
                    <fullName>Despacho</fullName>
                </value>
                <value>
                    <fullName>Post-Venta (División Resinas)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <recordTypes>
        <fullName>Reclamo</fullName>
        <active>true</active>
        <businessProcess>Reclamos</businessProcess>
        <label>Reclamo</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sugerencias_o_Solicitudes</fullName>
        <active>true</active>
        <businessProcess>Sugerencia o Solicitud</businessProcess>
        <label>Sugerencias o Solicitudes</label>
    </recordTypes>
</CustomObject>